# telebot

./: README.md  pyproject.toml  settings.json
telegram_bot/: main.py
