[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["Vasiliy Kryuchkov <vvvvk@yandex.ru>"]
readme = "README.md"
packages = [{include = "telegram_bot"}]

[tool.poetry.dependencies]
python = "^3.8.10"
aiogram = "^2.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
